--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 
 body{
-    background-color:darkgrey;
+    background-image: url("dev.png");
+
 }
 #title {
-    color:midnightblue;
+    color:rgba(40, 95, 247, 0.726);
 } 
 .subtitle, .post_title{
-    color: blue;
+    color: rgb(20, 20, 92);
     font-size: 27px;
 }
 
@@ -22,7 +23,7 @@ body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .post_{
-    background-color:white;
+    background-color:rgba(199, 236, 243, 0.733);
     padding: 10px;
     border: 3px solid black;
 }
