--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url("dev.png");
+    background: url("dev.png") no-repeat 0 10%;
 }
 
 .photo{
@@ -8,10 +8,21 @@ body{
     border: 1px solid black;
 }
 #title {
-    color:rgba(3, 3, 3, 0.726);
+    font-family:'Courier New', Courier, monospace;
+    color:rgba(0, 0, 0, 0.726);
+    padding-top: 10px;
+    font-size: 43px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    ;
 } 
+
+a{
+    text-decoration:underline;
+}
+
 .subtitle, .post_title{
-    color: rgb(19, 19, 20);
+    color: rgb(102, 102, 104);
     font-size: 27px;
 }
 
@@ -39,6 +50,11 @@ body{
 }
 
 .list{
+    list-style-type: none;
     font-family: cursive;
     font-size: 18px;
+    padding-left: 10px;
+}
+.list li a{
+    color: rgb(78, 77, 77);
 }
